syntax = "proto3";
package tt.v1;

message User {
	string username = 1;
	string password = 2;
	string email    = 3;
	string phone    = 4;
}

message AddUserRequest {
	User user = 1;
}
message AddUserResponse {}

message GetUserRequest {
	string username = 1;
}
message GetUserResponse {
	User user = 1;
}

message UpdateUserRequest {
	User user = 1;
}
message UpdateUserResponse {}

message DeleteUserRequest {
	string username = 1;
}
message DeleteUserResponse {}

message ListUsersRequest {}
message ListUsersResponse {
	repeated User users = 1;
}